trunk/Archive2/4f/cba365c9b25d1e/output
main.cpp: In function 'int main()':
main.cpp:15:22: error: invalid use of non-static member function
 std::thread t (a.func);
                      ^
